src/objects/DNIS_Map__mdt.object
<CustomObject>
    <description>A mapping of DNIS values to case types</description>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNIS__c</fullName>
        <label>DNIS</label>
        <length>11</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <label>Topic</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>DNIS Map</label>
    <pluralLabel>DNIS MAP</pluralLabel>
</CustomObject>